--- a/news-details.html
+++ b/news-details.html
@@ -7,9 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gramentheme">
-        <meta name="description" content="Exolax - Creative Agency Html Template">
+        <meta name="description" content="Inala Digital Creatives">
         <!-- ======== Page title ============ -->
-        <title>Exolax - Creative Agency Html Template</title>
+        <title>Inala Digital Creatives</title>
         <!--<< Favcion >>-->
         <link rel="shortcut icon" href="assets/img/favicon.svg">
         <!--<< Bootstrap min.css >>-->
@@ -743,3 +743,4 @@
       <script src="assets/js/main.js"></script>
     </body>
 </html>
+
