--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                             <li class="service-list">
                                 <div class="content">
                                     <h4 class="wow fadeInUp">001</h4>
-                                    <h3 class="wow tp_reveal_anim"><a href="service-details.html">Design Engineering</a>
+                                    <h3 class="wow tp_reveal_anim"><a href="service-details.html">Design</a>
                                     </h3>
                                 </div>
                                 <p class="wow img-custom-anim-right" data-wow-duration="1.5s" data-wow-delay="0.4s">
@@ -401,14 +401,13 @@
                                 <div class="content">
                                     <h4 class="wow fadeInUp">002</h4>
                                     <h3 class="wow tp_reveal_anim" data-wow-duration="1.5s" data-wow-delay="0.4s"><a
-                                            href="service-details.html">Digital Experiences</a></h3>
+                                            href="service-details.html">Digital</a></h3>
                                 </div>
                             </li>
                             <li class="service-list">
                                 <div class="content">
                                     <h4 class="wow fadeInUp">003</h4>
-                                    <h3 class="wow tp_reveal_anim"><a href="service-details.html">Strategic
-                                            Narratives</a></h3>
+                                    <h3 class="wow tp_reveal_anim"><a href="service-details.html">Branding</a></h3>
                                 </div>
                                 <p class="wow img-custom-anim-right" data-wow-duration="1.5s" data-wow-delay="0.4s">
                                     Annual reports. Investor decks. Corporate profiles. The documents that determine
@@ -538,9 +537,9 @@
                                                             <g clip-path="url(#clip0_205_1662)">
                                                                 <path
                                                                     d="M26.666 -0.222168V19.7778L16.666 9.77783V-0.222168H26.666Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                                 <path d="M10 -0.222168V19.7778L0 9.77783V-0.222168H10Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                             </g>
                                                             <defs>
                                                                 <clipPath id="clip0_205_166211">
@@ -574,9 +573,9 @@
                                                             <g clip-path="url(#clip0_205_1662)">
                                                                 <path
                                                                     d="M26.666 -0.222168V19.7778L16.666 9.77783V-0.222168H26.666Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                                 <path d="M10 -0.222168V19.7778L0 9.77783V-0.222168H10Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                             </g>
                                                             <defs>
                                                                 <clipPath id="clip0_205_166222">
@@ -610,9 +609,9 @@
                                                             <g clip-path="url(#clip0_205_1662)">
                                                                 <path
                                                                     d="M26.666 -0.222168V19.7778L16.666 9.77783V-0.222168H26.666Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                                 <path d="M10 -0.222168V19.7778L0 9.77783V-0.222168H10Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                             </g>
                                                             <defs>
                                                                 <clipPath id="clip0_205_166233">
@@ -647,9 +646,9 @@
                                                             <g clip-path="url(#clip0_205_1662)">
                                                                 <path
                                                                     d="M26.666 -0.222168V19.7778L16.666 9.77783V-0.222168H26.666Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                                 <path d="M10 -0.222168V19.7778L0 9.77783V-0.222168H10Z"
-                                                                    fill="#3ed3ba" />
+                                                                    fill="#73bf44" />
                                                             </g>
                                                             <defs>
                                                                 <clipPath id="clip0_205_166244">
