--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
                             <div class="section-title">
                                 <h6>studio philosophy</h6>
                                 <h2 class="text-white tp-char-animation">
-                                    The best work <br>doesn't apologize <br>for where it's from
-                                </h2>
+                                    The best work <br>doesn't apologize
                             </div>
                             <a href="about.html" class="theme-btn border-white wow fadeInUp" data-wow-delay=".5s">
                                 <span class="icon-1">
